--- a/index.html
+++ b/index.html
@@ -266,6 +266,8 @@
 					<label class="settings-block">
 						<select id="control-theme-style" class="control-select" title="Player theme style">
 							<option value="Default" selected>Default</option>
+							<option value="Classic">Classic</option>
+							<option value="Dollchan">Dollchan</option>
 							<option value="Blue">Blue</option>
 							<option value="Cake">Cake</option>
 							<option value="Dusk">Dusk</option>
@@ -294,6 +296,7 @@
 							<option value="RobotoMono">RobotoMono</option>
 							<option value="Tomo">Tomo</option>
 							<option value="VCR">VCR</option>
+							<option value="Perfect DOS VGA 437">Perfect DOS VGA 437</option>
 
 						</select>
 						Editor font
@@ -380,6 +383,7 @@
 	<a id="downloader" class="hidden"></a>
 </body>
 </html>
+
 
 
 
